--- a/templates/artist.html
+++ b/templates/artist.html
@@ -95,77 +95,90 @@
 
         <div class="content-h-separator row"></div>
 
-        <!--artist summary-->
-        <div class="row center">
-            <div class="content-box">
-                <div class="title-text">
-                    <div id="artist-image-container" align="right"> 
-                        {% if image %}
-                            <a href="{{ image }}"><img src="{{ image }}" id="artist-image"></a>
+        {% if results == True %}
+
+            <!--artist summary-->
+            <div class="row center">
+                <div class="content-box">
+                    <div class="title-text">
+                        <div id="artist-image-container" align="right"> 
+                            {% if image %}
+                                <a href="{{ image }}"><img src="{{ image }}" id="artist-image"></a>
+                            {% endif %}
+                        </div>
+
+                        {{ name }} - <span class="uline" title="A representation of how popular an artist or song is.">{{ hot|to_percent }}%</span>
+                        
+                        {% if twitter %}<br /> @{{ twitter }}{% endif %}
+                        <br />
+                        {% if terms %}
+                            <div class="ital">
+                                {% for t in terms %}
+                                    {{ t }}
+                                {% endfor %}
+                            </div>
                         {% endif %}
                     </div>
-
-                    {{ name }} - <span class="uline" title="A representation of how popular an artist or song is.">{{ hot|to_percent }}%</span>
-                    
-                    {% if twitter %}<br /> @{{ twitter }}{% endif %}
                     <br />
-                    {% if terms %}
-                        <div class="ital">
-                            {% for t in terms %}
-                                {{ t }}
-                            {% endfor %}
+                    <!--(Artist biographies will appear here when I develop an algorithm to return meaningful data.)-->
+                    <!--remove this until we have a reliable way to receive acceptable bios-->
+                    {% if bio %}
+                        <div class="indent">
+                            {{ bio }}
                         </div>
                     {% endif %}
-                </div>
-                <br />
-                <!--(Artist biographies will appear here when I develop an algorithm to return meaningful data.)-->
-                <!--remove this until we have a reliable way to receive acceptable bios-->
-                {% if bio %}
-                    <div class="indent">
-                        {{ bio }}
-                    </div>
-                {% endif %}
-        
-                <div class="clear"></div>
-            </div>  
-        </div><!--END artist summary-->
+            
+                    <div class="clear"></div>
+                </div>  
+            </div><!--END artist summary-->
 
-        <div class="content-h-separator row"></div>
+            <div class="content-h-separator row"></div>
 
-        <div class="row center">
+            <div class="row center">
 
-            <div class="col-lg-5 content-box double-col">
-                <div class="subtitle-text">Top Songs</div>
-                <ul>
-                {% for s in songs %}
+                <div class="col-lg-5 content-box double-col">
+                    <div class="subtitle-text">Top Songs</div>
+                    <ul>
+                    {% for s in songs %}
 
-                    <il>
-                        {{ forloop.counter }}.  
-                        <a href = "{% url 'home.views.song_info' %}?q={{ s.title.split|join:'+' }}" > {{ s }}</a>
-                    </il>
-                    <br />
-
-                {% endfor %}
-                </ul>
-            </div><!--END song block-->
-
-            <div class="content-w-separator col-lg-1"></div>
-
-            <div class="col-lg-5 content-box double-col">
-                 <div class="subtitle-text">Similar Artists</div>
-                <ul>
-                {% if artists %}
-                    {% for a in artists %}
                         <il>
                             {{ forloop.counter }}.  
-                            <a href = "{% url 'home.views.artist_info' %}?q={{ a.split|join:'+' }}" > {{ a }}</a>
+                            <a href = "{% url 'home.views.song_info' %}?q={{ s.title.split|join:'+' }}" > {{ s }}</a>
                         </il>
                         <br />
+
                     {% endfor %}
-                {% endif %}
-                </ul>
-            </div><!--END artist block-->
-        </div><!--END dual columns-->
+                    </ul>
+                </div><!--END song block-->
+
+                <div class="content-w-separator col-lg-1"></div>
+
+                <div class="col-lg-5 content-box double-col">
+                     <div class="subtitle-text">Similar Artists</div>
+                    <ul>
+                    {% if artists %}
+                        {% for a in artists %}
+                            <il>
+                                {{ forloop.counter }}.  
+                                <a href = "{% url 'home.views.artist_info' %}?q={{ a.split|join:'+' }}" > {{ a }}</a>
+                            </il>
+                            <br />
+                        {% endfor %}
+                    {% endif %}
+                    </ul>
+                </div><!--END artist block-->
+            </div><!--END dual columns-->
+        {% else %}
+
+        <div class="row center">
+            <div class="content-box">
+                <div class ="subtitle-text ital">
+                    We could not find information on this artist.  Try again with a different name.
+                </div>
+            </div>
+        </div>
+
+        {% endif %}
     </div><!--END main-->
 
     <!--right column-->
