--- a/templates/trending.html
+++ b/templates/trending.html
@@ -147,7 +147,7 @@
                         <div class="subtitle-text">
                             {{ forloop.counter }}. 
                             <a href = "{% url 'home.views.artist_info' %}?q={{ artist.name.split|join:'+' }}" > {{ artist.name }}</a> 
-                            - <span class="line" title="A representation of how popular an artist or song is.">{{ artist.hotttnesss|to_percent }}%</span>
+                            - <span class="uline" title="A representation of how popular an artist or song is.">{{ artist.hotttnesss|to_percent }}%</span>
                         </div>
                     </div>
                 </div>
