--- a/templates/about.html
+++ b/templates/about.html
@@ -98,15 +98,15 @@
                 What is this?
                 </div>
                 <div class="indent">
-                    Audiosearch is a music search engine developed in the Django web framework using the Echo Nest api.  This is my first project deployed on the web and my second substantial Django project.  
+                    Audiosearch is a music search engine developed in the Django web framework using the Echo Nest API.  Echo Nest provides the artist and song information.  Audiosearch manages this data and provides a clean interface for finding new music.
                 </div>
                 <br />
 
                 <div class="subtitle-text">
-                I found a bug / I have a suggestion!
+                    I found a bug / I have a suggestion!
                 </div>
                 <div class="indent">
-                    Send an email to the address listed below.  I welcome all bug reports and criticism!
+                    Send an email to the address listed below.  I welcome all bug reports and criticism.
                 </div>
                 <br />
 
@@ -127,11 +127,11 @@
                 <br />
 
                 <div class="subtitle-text">
-                Technologies used:
+                    Technologies used:
                 </div>
                 <ul>
                     <li>Django web framework 1.6.2</li>
-                    <li>Echo Nest api</li>
+                    <li>Echo Nest API</li>
                     <li>Pyechonest library</li>
                     <li>Python 2.7.5</li>
                 </ul>
