optimized API calls to reduce 500s

--- a/templates/500.html
+++ b/templates/500.html
@@ -95,6 +95,12 @@
         <div class="content-box">
             You're more than likely viewing this because my Echo Nest API key is exceeding its access rate limit.  Please try again in 10-15 seconds.  If this problem persists contact me at bradleydchambers@gmail.com.  
         </div>
+
+        <div class="content-h-separator row"></div>
+
+        <div class="content-box">
+            Note: Echo Nest caps my data access rate which will prevent certain pages from displaying information during high load.  I am working to optimize server-side data requests to prevent this downtime.  Certain features have been temporarily disabled.  
+        </div>
     </div><!--END main-->
 
     <!--right column-->
@@ -104,7 +110,6 @@
 
 <script src="{{ STATIC_URL }}js/jquery-1.11.0.js"></script>
 <script src="{{ STATIC_URL }}js/bootstrap.min.js"></script>
-<script src="{{ STATIC_URL }}js/script.js"></script>
 </body>
 
 </html>
