optimized artist / song pages

--- a/templates/500.html
+++ b/templates/500.html
@@ -99,7 +99,7 @@
         <div class="content-h-separator row"></div>
 
         <div class="content-box">
-            Note: Echo Nest caps my data access rate which will prevent certain pages from displaying information during high load.  I am working to optimize server-side data requests to prevent this downtime.  Certain features have been temporarily disabled.  
+            Note: Echo Nest caps my data access rate which will prevent certain pages from displaying information during high load.  I am working to optimize server-side data requests to prevent this downtime.  Song pages are consuming more calls than desired and are prone to timing out.  
         </div>
     </div><!--END main-->
 
