--- a/templates/500.html
+++ b/templates/500.html
@@ -64,7 +64,9 @@
             <div class="content-w-separator col-lg-1"></div>
 
             <div class="nav-button col-lg-2">
+            <!--
                 <a href="{% url 'home.views.artist_info' %}?q={{ featured_name.split|join:'+' }}"><span class="nav-link"></span></a>
+                -->
                 <div class="box-footer">
                     featured
                 </div>
@@ -99,7 +101,7 @@
         <div class="content-h-separator row"></div>
 
         <div class="content-box">
-            Note: Echo Nest caps my data access rate which will prevent certain pages from displaying information during high load.  I am working to optimize server-side data requests to prevent this downtime.  Some features are temporarily disabled.
+            Note: Web crawlers are effectively DDoSing this application.  Echo Nest limits the amount of calls I can make per minute.  I am working to find a solution.  Some features are temporarily disabled.  
         </div>
     </div><!--END main-->
 
