--- a/templates/500.html
+++ b/templates/500.html
@@ -98,8 +98,10 @@
 
         <div class="content-h-separator row"></div>
 
-        <div class="content-box">
-            Note: Web crawlers are effectively DDoSing this application.  Echo Nest limits the amount of calls I can make per minute.  I am working to find a solution.  Some features are temporarily disabled.  
+        <div class="row center">
+            <div class="content-box">
+                Note: The song information pages consume many Echo Nest calls.  I am working to optimize this.
+            </div>
         </div>
     </div><!--END main-->
 
