--- a/templates/song.html
+++ b/templates/song.html
@@ -123,7 +123,6 @@
 
                 <div class="col-lg-5 content-box double-col">
                     <div class="subtitle-text">Similar Songs</div>
-                    <!--
                     <ul>
                     {% if similar_songs %}
                         {% for s in similar_songs %}
@@ -135,15 +134,12 @@
                         {% endfor %}
                     {% endif %}
                     </ul>
-                    -->
-                    Temporarily disabled. 
                 </div><!--END song block-->
 
                 <div class="content-w-separator col-lg-1"></div>
 
                 <div class="col-lg-5 content-box double-col">
                      <div class="subtitle-text">Similar Artists</div>
-                     <!--
                     <ul>
                     {% if similar_artists %}
                         {% for a in similar_artists %}
@@ -155,8 +151,6 @@
                         {% endfor %}
                     {% endif %}
                     </ul>
-                    -->
-                    Temporarily disabled. 
                 </div><!--END artist block-->
             </div><!--END dual columns-->
 
@@ -172,8 +166,10 @@
 
         <div class="content-h-separator row"></div>
 
-        <div class="content-box">
-            Note: Echo Nest caps my data access rate which will prevent certain pages from displaying information during high load.  I am working to optimize server-side data requests to prevent this downtime.  Some features are temporarily disabled.
+        <div class="row center">
+            <div class="content-box">
+                Note: The song information pages consume many Echo Nest calls.  I am working to optimize this.
+            </div>
         </div>
     </div><!--END main-->
 
